@@ -128,8 +128,7 @@ msdos_eval_path(
                 /*
                  *  Am I at the root of this mounted filesystem?
                  */
-                if (pathloc->node_access ==
-                    pathloc->mt_entry->mt_fs_root.node_access)
+                if (rtems_filesystem_is_root_location(pathloc))
                 {
                     /*
                      *  Am I at the root of all filesystems?
@@ -310,8 +309,7 @@ msdos_eval4make(
                 /*
                  *  Am I at the root of this mounted filesystem?
                  */
-                if (pathloc->node_access ==
-                    pathloc->mt_entry->mt_fs_root.node_access)
+                if (rtems_filesystem_is_root_location(pathloc))
                 {
                     /*
                      *  Am I at the root of all filesystems?
