@@ -300,7 +300,7 @@ int imfs_dir_rmnod(
    * You cannot remove the file system root node.
    */
 
-  if ( pathloc->mt_entry->mt_fs_root.node_access == pathloc->node_access )
+  if ( rtems_filesystem_is_root_location(pathloc) )
      rtems_set_errno_and_return_minus_one( EBUSY );
 
   /*
